# EoIP-rs

./: .gitignore  Cargo.toml  README.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/docs/prds/: README.md  bugfix-keepalive-stale-on-startup.md  phase1-chr-infrastructure.md  phase10-xdp-acceleration.md  phase11-userspace-performance.md  phase12-pmtud.md  phase13-ipsec-secret.md  phase2-mikrotik-to-mikrotik.md  phase3-protocol-analysis.md  phase4-design-reflection.md  phase5-single-tunnel-interop.md  phase6-multi-tunnel-scaling.md  phase7-performance-stability.md  phase8-linux-to-linux.md  phase9-cross-platform.md
.taskmaster/tasks/: tasks.json
config/: eoip-rs.example.toml
crates/eoip-analyzer/: Cargo.toml
crates/eoip-analyzer/src/: cli.rs  decode.rs  deviation.rs  ethernet.rs  ip.rs  main.rs  output.rs  pcap_reader.rs  stats.rs
crates/eoip-api/: Cargo.toml  build.rs
crates/eoip-api/proto/: eoip.proto
crates/eoip-api/src/: lib.rs
crates/eoip-cli/: Cargo.toml
crates/eoip-cli/src/: client.rs  commands.rs  main.rs  output.rs  parse.rs  repl.rs
crates/eoip-helper/: Cargo.toml
crates/eoip-helper/src/: fdpass.rs  lib.rs  main.rs  mss.rs  privdrop.rs  rawsock.rs  tap.rs
crates/eoip-proto/: Cargo.toml
crates/eoip-proto/src/: error.rs  etherip.rs  gre.rs  lib.rs  types.rs  udp_shim.rs  wire.rs
crates/eoip-rs/: Cargo.toml
crates/eoip-rs/benches/: buffer_pool.rs  dashmap_demux.rs  encode_decode.rs  tx_batch_build.rs
crates/eoip-rs/src/: config.rs  keepalive.rs  lib.rs  main.rs  shutdown.rs
crates/eoip-rs/src/api/: health_svc.rs  mod.rs  stats_svc.rs  tunnel_svc.rs
crates/eoip-rs/src/ipsec/: config.rs  mod.rs  monitor.rs  vici.rs
crates/eoip-rs/src/net/: mod.rs  mtu.rs  pmtud.rs  tap.rs  tap_windows.rs
crates/eoip-rs/src/packet/: buffer.rs  mod.rs  packet_mmap.rs  rx.rs  tx.rs
crates/eoip-rs/src/tunnel/: handle.rs  lifecycle.rs  manager.rs  mod.rs  registry.rs
docs/design/: README.md  architecture.md  performance.md  platform.md  protocol.md  security.md  threading.md
docs/guides/: CLI.md  INSTALL.md  IPSEC.md  MIKROTIK.md  NETWORKING.md  PMTUD.md
docs/performance/: PERF-OPT-PRD.md  RESULTS.md
docs/testing/: README.md
scripts/: eoip-ifup  install-linux.sh  setup-tunnel.ps1  setup-tunnel.sh
systemd/: eoip-helper.service  eoip-rs.service
test-lab/: README.md  env.sh.example
tests/captures/: PROTOCOL_FINDINGS.md  mk-mk-arp.pcap  mk-mk-idle.pcap  mk-mk-mtu.pcap  mk-mk-multi.pcap  mk-mk-ping.pcap  mk-mk-updown.pcap
tests/captures/mk-mk-baseline/: eoip-detail-20260417-145421.txt  mk-a-export-20260417-145421.rsc  mk-b-export-20260417-145421.rsc
tests/infra/: README.md  deploy-chr.sh  setup-eoip-pair.sh  teardown-chr.sh
