[workspace]
resolver = "2"
members = [
    "crates/eoip-proto",
    "crates/eoip-api",
    "crates/eoip-helper",
    "crates/eoip-rs",
    "crates/eoip-analyzer",
    "crates/eoip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["net", "ioctl", "socket", "user", "uio"] }
socket2 = { version = "0.5", features = ["all"] }
dashmap = "6"
bytes = "1"
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
crossbeam = "0.8"
