[package]
name = "eoip-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC service definitions for EoIP-rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
