[package]
name = "eoip-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MikroTik-style CLI for managing EoIP-rs tunnels via gRPC"

[[bin]]
name = "eoip-cli"
path = "src/main.rs"

[dependencies]
eoip-api = { path = "../eoip-api" }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
colored = "2"
rustyline = "14"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
