[package]
name = "eoip-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Privileged helper binary for EoIP-rs (TAP/raw socket creation, FD passing)"

[[bin]]
name = "eoip-helper"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
eoip-proto = { path = "../eoip-proto" }
nix = { workspace = true }
socket2 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"
