[package]
name = "eoip-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Userspace EoIP/EoIPv6 daemon compatible with MikroTik RouterOS"

[[bin]]
name = "eoip-rs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
eoip-proto = { path = "../eoip-proto" }
eoip-helper = { path = "../eoip-helper" }
eoip-api = { path = "../eoip-api" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
nix = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
