[package]
name = "eoip-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Userspace EoIP/EoIPv6 daemon compatible with MikroTik RouterOS"

[[bin]]
name = "eoip-rs"
path = "src/main.rs"

[[bin]]
name = "eoip-rs-win"
path = "src/bin/eoip-rs-win.rs"
required-features = ["windows"]

[lib]
path = "src/lib.rs"

[dependencies]
eoip-proto = { path = "../eoip-proto" }
eoip-api = { path = "../eoip-api" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
socket2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
eoip-helper = { path = "../eoip-helper" }
nix = { workspace = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Registry", "Win32_System_Threading", "Win32_Security"] }

[features]
default = []
windows = []
